# jornal

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml  up.py
jornal/: app.py  controllers.py  jemail.py  run.py  utils.py
jornal/static/js/: configuracao.js  edicao.js  enviar.js  index.js  login.js  logout.js  novo.js  registrar.js  util.js
jornal/views/: base.html  configuracao.html  edicao.html  enviar.html  index.html  logout.html  novo.html
tests/: test_jornal.py  test_utils.py
