[tool.poetry]
name = "jornal"
version = "0.1.0"
description = "Jornal-App"
authors = ["Jhonathan P. Banczek <jpbanczek@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jhoonb/jornal"
homepage = "https://github.com/jhoonb/jornal"
classifiers=[
    'Development Status :: 4 - Beta',
    'Environment :: Web Environment',
    'Topic :: Office/Business :: News/Diary',
    'Framework :: Bottle',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: Portuguese (Brazilian)',
    'Natural Language :: Portuguese (Brazilian)',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Topic :: Internet :: WWW/HTTP :: Dynamic Content :: News/Diary',
    'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
    'Programming Language :: JavaScript',
    'Topic :: Internet :: WWW/HTTP :: WSGI :: Application'
]
packages = [
    {include = "jornal"}
]

[tool.poetry.dependencies]
python = "^3.6"
bottle = "^0.12.18"
jinja2 = "^2.11.2"
feedparser = "^5.2.1"
newspaper3k = "^0.2.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
